TRK-92 chore: adjustments in verify token and capture of data in claims
